# beacon-devnet-genesis

./: Cargo.toml  Dockerfile
src/: lib.rs
