[package]
name = "beacon-devnet-genesis"
version = "0.3.2"
edition = "2021"
description = "Generate beacon chain devnet genesis states from mnemonics"
keywords = ["ethereum", "beacon", "devnet"]
repository = "https://github.com/dapplion/beacon-devnet-genesis"
documentation = "https://docs.rs/beacon-devnet-genesis"
authors = ["dapplion <dapplion@chainsafe.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "beacon-devnet-genesis"
path = "src/main.rs"

[[bench]]
name = "keypair_derive"
harness = false

[dependencies]
types = { git = "https://github.com/sigp/lighthouse", rev = "v7.1.0" }
eth2_network_config = { git = "https://github.com/sigp/lighthouse", rev = "v7.1.0" }
genesis = { git = "https://github.com/sigp/lighthouse", rev = "v7.1.0" }
state_processing = { git = "https://github.com/sigp/lighthouse", rev = "v7.1.0" }
eth2_wallet = { git = "https://github.com/sigp/lighthouse", rev = "v7.1.0" }
ethereum_serde_utils = "0.7"
tree_hash = "0.9"
anyhow = "1"
ethereum_ssz = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = "1"
serde_yaml = "0.9"
rayon = "1.7"
ethers-core = "2.0.12"
serde_json = "1"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.4.0"

